--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
-        /* TUS ESTILOS ORIGINALES DE FLASK */
+        /* Estilos originales de tu proyecto */
         body {
             background: #f3ebe3;
             font-family: "Poppins", sans-serif;
@@ -97,25 +97,25 @@
                     <h3 class="card-title text-center mb-3">Iniciar Sesión</h3>
 
                     <div class="alert alert-info text-center" role="alert">
-                        <small>Esta es una <strong>Demo Visual</strong> en GitHub Pages.<br>No conecta a base de datos real.</small>
+                        <small>Versión <strong>Demo Estática</strong>.<br>Ingresa cualquier dato para probar.</small>
                     </div>
 
                     <form onsubmit="event.preventDefault(); loginSimulado();">
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" name="email" value="admin@cafe.com" required>
+                            <input type="email" class="form-control" id="email" value="admin@cafe.com" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="password" name="password" value="123456" required>
+                            <input type="password" class="form-control" id="password" value="123456" required>
                         </div>
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary">Entrar</button>
+                            <button type="submit" id="btnLogin" class="btn btn-primary">Entrar</button>
                         </div>
                     </form>
 
                     <div class="text-center mt-3 register-link">
-                        <a href="#" onclick="alert('En la app completa, esto te llevaría al registro.')" style="color:#7a4e33; font-weight:600;">¿No tienes cuenta? Regístrate</a>
+                        <a href="#" onclick="alert('En la versión completa, esto lleva al registro.')" style="color:#7a4e33; font-weight:600;">¿No tienes cuenta? Regístrate</a>
                     </div>
 
                 </div>
@@ -125,8 +125,14 @@
 
     <script>
         function loginSimulado() {
-            const email = document.getElementById('email').value;
-            alert('¡Bienvenido ' + email + '!\n\nHas iniciado sesión correctamente en la DEMO ESTÁTICA.\n\nPara ver la funcionalidad completa (Base de datos, POS, etc.), revisa el código en el repositorio.');
+            const btn = document.getElementById('btnLogin');
+            btn.innerHTML = 'Conectando...';
+            btn.disabled = true;
+
+            // Simulamos una pequeña espera y redirigimos al menú
+            setTimeout(() => {
+                window.location.href = "menu.html";
+            }, 800);
         }
     </script>
 
